Modify root URL and title message

--- a/challenge3/webapp/sample/app/views/houses/index.html.erb
+++ b/challenge3/webapp/sample/app/views/houses/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Listing houses</h1>
+<h1>Sample Application for EnergyDataSimulationChallenge Challenge3!</h1>
+
+<p>Click 'show' to see charts</p>
 
 <table>
   <thead>
