--- a/challenge3/webapp/sample/app/views/layouts/application.html.erb
+++ b/challenge3/webapp/sample/app/views/layouts/application.html.erb
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="CambridgeApp">
 <head>
   <title>Sample</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  <script src="js/houseCtrl.js"></script>
 </head>
 <body>
 
