--- a/challenge3/webapp/sample/app/views/layouts/application.html.erb
+++ b/challenge3/webapp/sample/app/views/layouts/application.html.erb
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html ng-app="CambridgeApp">
 <head>
-  <title>Sample</title>
+  <title>Cambridge</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  <%= favicon_link_tag 'favicon.ico' %>
 </head>
 <body>
 
