--- a/challenge3/webapp/sample/app/views/houses/index.html.erb
+++ b/challenge3/webapp/sample/app/views/houses/index.html.erb
@@ -25,45 +25,13 @@
       <td>{{house.lastname}}</td>
       <td>{{house.city}}</td>
       <td>{{house.has_child}}</td>
-      <td>Graphe</td>
-      <td>EDIT</td>
-      <td>REMOVE</td>
+      <td><a href='houses/{{house.id}}'>Show</a></td>
+      <td><a href='houses/{{house.id}}/edit'>Edit</a></td>
+      <td><a href='houses/{{house.id}}'>DELETE</a></td>
     </tr>
     </tbody>
   </table>
 </div>
-
-<table>
-  <thead>
-    <tr>
-      <th>Firstname</th>
-      <th>Lastname</th>
-      <th>City</th>
-      <th>Num of people</th>
-      <th>Has child</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @houses.each do |house| %>
-      <tr>
-        <td><%= house.firstname %></td>
-        <td><%= house.lastname %></td>
-        <td><%= house.city %></td>
-        <td><%= house.num_of_people %></td>
-        <td><%= house.has_child %></td>
-        <td><%= link_to 'Show', house %></td>
-        <td><%= link_to 'Edit', edit_house_path(house) %></td>
-        <td><%= link_to 'Destroy', house, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-
 
 <br>
 
