--- a/challenge3/webapp/sample/app/views/layouts/application.html.erb
+++ b/challenge3/webapp/sample/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
   <%= favicon_link_tag 'favicon.ico' %>
+  <script src="http://bazalt-cms.com/assets/ng-table/0.3.0/ng-table.js"></script>
 </head>
 <body>
 <div class="basic">
