--- a/challenge3/webapp/sample/app/views/layouts/application.html.erb
+++ b/challenge3/webapp/sample/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html ng-app="CambridgeApp">
 <head>
   <title>Cambridge</title>
+  <script type="text/javascript" src="https://www.google.com/jsapi"></script>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= stylesheet_link_tag    "challenge", :media => "all" %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
