--- a/challenge3/webapp/sample/app/views/layouts/application.html.erb
+++ b/challenge3/webapp/sample/app/views/layouts/application.html.erb
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
-<html ng-app="CambridgeApp">
+<html>
 <head>
-  <title>Cambridge</title>
-  <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+  <title>Sample</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= stylesheet_link_tag    "challenge", :media => "all" %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
-  <%= favicon_link_tag 'favicon.ico' %>
-  <script src="http://bazalt-cms.com/assets/ng-table/0.3.0/ng-table.js"></script>
 </head>
 <body>
-<div class="basic">
+
 <%= yield %>
-</dive>
+
 </body>
 </html>
