--- a/challenge3/webapp/sample/app/views/houses/show.html.erb
+++ b/challenge3/webapp/sample/app/views/houses/show.html.erb
@@ -25,8 +25,25 @@
   <%= @house.has_child %>
 </p>
 
-<div ng-controller="graphCtrl" ng-init="init('<%= @house.id %>')" id="chartdiv" ng-chart style="width: 800px; height: 400px;">
-</div>
+<div id="chart"></div>
+
+<script type="text/javascript" src="http://www.google.com/jsapi"></script>
+<script type="text/javascript">
+  google.load("visualization", "1", {packages:["corechart"]});
+  google.setOnLoadCallback(drawChart);
+
+  function drawChart() {
+  var data = google.visualization.arrayToDataTable(<%= raw @energies_for_gchart %>);
+
+  var options = {
+    seriesType: "bars"
+  };
+
+  var chart = new google.visualization.ColumnChart(document.getElementById('chart'));
+  chart.draw(data, options);
+  }
+</script>
+
 
 
 <%= link_to 'Edit', edit_house_path(@house) %> |
