Add a TODO comment

--- a/challenge3/webapp/sungho_arai/app/views/houses/index.html.erb
+++ b/challenge3/webapp/sungho_arai/app/views/houses/index.html.erb
@@ -23,6 +23,7 @@
 </div>
 <br>
 
+<!-- TODO(sungho.arai): Create a controller for creating the following chart-->
 <script type='text/javascript' src='https://www.google.com/jsapi'></script>
     <script type='text/javascript'>
      google.load('visualization', '1', {'packages': ['geochart']});
