Change the font size and add some explanation to the top page

--- a/challenge3/webapp/sungho_arai/app/views/houses/index.html.erb
+++ b/challenge3/webapp/sungho_arai/app/views/houses/index.html.erb
@@ -2,9 +2,10 @@
 
 <h1>EnergyDataSimulationChallenge Challenge3!</h1>
 
-<p style="clear: left;">You can search for houses</p>
-<p>Click column name to sort data</p>
-<p>Click 'show' to see charts</p>
+<h2 style="clear: left;">You can search for houses</h2>
+<h2>Click column name to sort houses</h2>
+<h2>Click button on the bottom to change the number of houses on the table</h2>
+<h2>Click 'show' to see charts</h2>
 <input type="text" ng-model="keyword" placeholder="Search" />
 
 <div id="chart" class="geochart" style="width: 800px; height: 400px;"></div>
