add modified files

--- a/challenge3/webapp/ynoda/app/views/chartb/show.html.erb
+++ b/challenge3/webapp/ynoda/app/views/chartb/show.html.erb
@@ -1,1 +1,5 @@
+<h3>Scatter Diagram</h3>
+<div>This chart shows distribution of energy production data of "House with Child" and "House without Child"</div>
+<div>* By hovering mouse on each plots, you can see detailed value on tooltip.</div>
 <div id="chartbNode" style="width: 800px; height: 400px;"></div>
+<div id="legendb"></div>
