--- a/challenge3/webapp/ynoda/app/views/layouts/application.html.erb
+++ b/challenge3/webapp/ynoda/app/views/layouts/application.html.erb
@@ -5,15 +5,13 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
-  <%= javascript_include_tag "dojo/dojo/dojo", "data-dojo-config" => %Q(parseOnLoad: true) %>
+  <%= javascript_include_tag "dojo/dojo/dojo", "data-dojo-config" => %Q(parseOnLoad: true, modulePaths: {modules: '/js'}) %>
   <style type="text/css">
     @import "/assets/dojo/dijit/themes/claro/claro.css";
     @import "/assets/dojo/dijit/themes/dijit.css";
   </style>
 </head>
 <body class="claro">
-
 <%= yield %>
-
 </body>
 </html>
