--- a/challenge3/webapp/ynoda/app/views/top/index.html.erb
+++ b/challenge3/webapp/ynoda/app/views/top/index.html.erb
@@ -1,14 +1,16 @@
-<h2>Challenge 3 - Cambridge Energy Data Lab</h2>
-<%= javascript_include_tag "/js/topTab"  %>
+<h3>Cambridge Energy Data Lab - Challenge3 - ynoda</h3>
+<%= javascript_include_tag "/js/topTab" %>
 <div data-dojo-type="dijit/layout/TabContainer" style="width: 100%; height: 1000px;">
-<div data-dojo-type="dijit/layout/ContentPane" title="Chart 1">
+<div data-dojo-type="dijit/layout/ContentPane" title="Chart A">
+  <%= render :template => 'charta/show' %>
 </div>
-<div data-dojo-type="dijit/layout/ContentPane" title="Chart 2">
+<div data-dojo-type="dijit/layout/ContentPane" title="Chart B">
+  <%= render :template => 'chartb/show' %>
 </div>
-<div data-dojo-type="dijit/layout/ContentPane" title="Dataset">
-  <%= render :template => 'dataset/show' %>
+<div data-dojo-type="dijit/layout/ContentPane" title="Energy Log">
+  <%= render :template => 'energylog/show' %>
 </div>
-<div data-dojo-type="dijit/layout/ContentPane" title="House data">
-  <%= render :template => 'housedata/show' %>
+<div data-dojo-type="dijit/layout/ContentPane" title="House">
+  <%= render :template => 'house/show' %>
 </div>
 </div>
