Query city for select form and fix bug for update city

--- a/challenge3/webapp/masayuki0812/public/partials/houseDetail.html
+++ b/challenge3/webapp/masayuki0812/public/partials/houseDetail.html
@@ -34,7 +34,7 @@
   </div>
   <div class="field">
     <strong>City:</strong>
-    
+    <select ng-model="house.city.id" ng-options="city.id as city.name for city in cities"></select>
   </div>
   <div class="field">
     <strong>Num of people:</strong>
