--- a/challenge3/webapp/masayuki0812/public/partials/houseDetail.html
+++ b/challenge3/webapp/masayuki0812/public/partials/houseDetail.html
@@ -1,56 +1,68 @@
-<a href="/#/houses">Back</a>
+<ol class="breadcrumb">
+  <li><a href="/#/houses">Houses</a></li>
+  <li class="active">{{ house.firstname }} {{ house.lastname}}</li>
+</ol>
+
 <!--<p id="notice"><%= notice %></p>-->
 
-<div ng-show="!editing">
-  <p>
-    <strong>Firstname:</strong>
-    {{ house.firstname }}
-  </p>
-  <p>
-    <strong>Lastname:</strong>
-    {{ house.lastname }}
-  </p>
-  <p>
-    <strong>City:</strong>
-    {{ house.city.name }}
-  </p>
-  <p>
-    <strong>Num of people:</strong>
-    {{ house.num_of_people }}
-  </p>
-  <p>
-    <strong>Has child:</strong>
-    {{ house.has_child }}
-  </p>
-</div>
-<div ng-show="editing">
-  <div class="field">
-    <strong>Firstname:</strong>
-    <input ng-model="house.firstname">
+<table class="table table-condensed" ng-show="!editing">
+  <thead>
+    <tr>
+      <td>Name</td>
+      <td>City</td>
+      <td>Num of people</td>
+      <td>Has child</td>
+      <td style="width:30px;"><a ng-click="delete()">Delete</a></td>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>{{ house.firstname }} {{ house.lastname }}</td>
+      <td>{{ house.city.name }}</td>
+      <td>{{ house.num_of_people }}</td>
+      <td>{{ house.has_child }}</td>
+      <td><a ng-click="startEdit()">Edit</a></td>
+    </tr>
+  </tbody>
+</table>
+
+
+<div class="form-horizontal form-box" ng-show="editing">
+  <div class="form-group">
+    <label for="inputFirstname" class="col-sm-1 control-label">Firstname</label>
+    <div class="col-sm-3">
+      <input ng-model="house.firstname" id="inputFirstname" class="form-control" placeholder="Firstname">
+    </div>
   </div>
-  <div class="field">
-    <strong>Lastname:</strong>
-    <input ng-model="house.lastname">
+  <div class="form-group">
+    <label for="inputLastname" class="col-sm-1 control-label">Lastname</label>
+    <div class="col-sm-3">
+      <input ng-model="house.lastname" class="form-control" placeholder="Lastname">
+    </div>
   </div>
-  <div class="field">
-    <strong>City:</strong>
-    <select ng-model="house.city.id" ng-options="city.id as city.name for city in cities"></select>
+  <div class="form-group">
+    <label for="inputCity" class="col-sm-1 control-label">City</label>
+    <div class="col-sm-3">
+      <select ng-model="house.city.id" ng-options="city.id as city.name for city in cities" class="form-control"></select>
+    </div>
   </div>
-  <div class="field">
-    <strong>Num of people:</strong>
-    <input ng-model="house.num_of_people">
+  <div class="form-group">
+    <label for="inputPeople" class="col-sm-1 control-label">Num of people</label>
+    <div class="col-sm-3">
+      <input ng-model="house.num_of_people" class="form-control" placeholder="Num of people">
+    </div>
   </div>
-  <div class="field">
-    <strong>Has child:</strong>
-    <select ng-model="house.has_child">
-      <option value="0">No</option>
-      <option value="1">Yes</option>
-    </select>
+  <div class="form-group">
+    <label for="inputChild" class="col-sm-1 control-label">Has child</label>
+    <div class="col-sm-1">
+      <select ng-model="house.has_child" class="form-control">
+        <option value="0">No</option>
+        <option value="1">Yes</option>
+      </select>
+    </div>
   </div>
-  <button ng-click="save()">Save</button>
-  <button ng-click="endEdit()">Cancel</button>
+  <button type="button" class="btn btn-primary" ng-click="save()">Save</button>
+  <button type="button" class="btn btn-default" ng-click="endEdit()">Cancel</button>
 </div>
 
 <div chart></div>
-
-<a ng-click="startEdit()">Edit</a> | <a ng-click="delete()">Delete</a>
