Show energies chart on city detail page

--- a/challenge3/webapp/masayuki0812/public/partials/cityDetail.html
+++ b/challenge3/webapp/masayuki0812/public/partials/cityDetail.html
@@ -30,3 +30,5 @@
   <button type="button" class="btn btn-primary" ng-click="save()">Save</button>
   <button type="button" class="btn btn-default" ng-click="endEdit()">Cancel</button>
 </div>
+
+<div chart-city-energies></div>
