--- a/challenge3/webapp/masayuki0812/public/partials/houseDetail.html
+++ b/challenge3/webapp/masayuki0812/public/partials/houseDetail.html
@@ -65,4 +65,4 @@
   <button type="button" class="btn btn-default" ng-click="endEdit()">Cancel</button>
 </div>
 
-<div chart></div>
+<div chart-house-energies></div>
