Add more info to city pages

--- a/challenge3/webapp/masayuki0812/public/partials/cityDetail.html
+++ b/challenge3/webapp/masayuki0812/public/partials/cityDetail.html
@@ -9,12 +9,16 @@
   <thead>
     <tr>
       <td>Name</td>
+      <td>Num of houses</td>
+      <td>Total Energy Production</td>
       <td style="width:30px;"></td>
     </tr>
   </thead>
   <tbody>
     <tr>
       <td>{{ city.name }}</td>
+      <td>{{ city.count_house | number }}</td>
+      <td>{{ city.total_energy_production | number }}</td>
       <td><a ng-click="startEdit()">Edit</a></td>
     </tr>
   </tbody>
