--- a/challenge3/webapp/masayuki0812/public/partials/cityList.html
+++ b/challenge3/webapp/masayuki0812/public/partials/cityList.html
@@ -18,6 +18,8 @@
     <tr>
       <th>Id</th>
       <th>Name</th>
+      <th>Num of house</th>
+      <th>Total Energy Production</th>
       <th style="width: 50px;"></th>
     </tr>
   </thead>
@@ -25,6 +27,8 @@
     <tr ng-repeat="city in cities" ng-class="{success: city.isCreated, info: city.isMouseover}" ng-mouseover="city.isMouseover=true" ng-mouseout="city.isMouseover=false">
       <td>{{ city.id }}</td>
       <td>{{ city.name }}</td>
+      <td>{{ city.count_house | number }}</td>
+      <td>{{ city.total_energy_production | number }}</td>
       <td><a ng-click="open(city)">Show</a></td>
     </tr>
   </tbody>
