Show chart for cities by c3

--- a/challenge3/webapp/masayuki0812/public/partials/cityList.html
+++ b/challenge3/webapp/masayuki0812/public/partials/cityList.html
@@ -1,3 +1,5 @@
+<div chart-cities></div>
+
 <div class="control-box" ng-show="!creating">
   <button type="button" class="btn btn-default" ng-click="startNew()">New City...</button>
 </div>
