--- a/challenge3/webapp/masayuki0812/public/partials/houseList.html
+++ b/challenge3/webapp/masayuki0812/public/partials/houseList.html
@@ -43,7 +43,7 @@
 <table class="table table-condensed">
   <thead>
     <tr>
-      <th>Nname</th>
+      <th>Name</th>
       <th>City</th>
       <th>Num of people</th>
       <th>Has child</th>
