--- a/challenge3/webapp/masayuki0812/public/partials/houseDetail.html
+++ b/challenge3/webapp/masayuki0812/public/partials/houseDetail.html
@@ -49,12 +49,13 @@
   <div class="form-group">
     <label for="inputPeople" class="col-sm-1 control-label">Num of people</label>
     <div class="col-sm-3">
-      <input ng-model="house.num_of_people" class="form-control" placeholder="Num of people">
+      <select ng-model="house.num_of_people" class="form-control" ng-options="i for i in [0,1,2,3,4,5,6,7,8,9]">
+      </select>
     </div>
   </div>
   <div class="form-group">
     <label for="inputChild" class="col-sm-1 control-label">Has child</label>
-    <div class="col-sm-1">
+    <div class="col-sm-2">
       <select ng-model="house.has_child" class="form-control">
         <option value="0">No</option>
         <option value="1">Yes</option>
