--- a/challenge3/webapp/masayuki0812/public/partials/cityList.html
+++ b/challenge3/webapp/masayuki0812/public/partials/cityList.html
@@ -5,14 +5,16 @@
 </div>
 
 <div class="form-horizontal form-box" ng-show="creating">
+ <form name="formCity">
   <div class="form-group">
     <label for="inputName" class="col-sm-1 control-label">Name</label>
     <div class="col-sm-3">
-      <input ng-model="city.name" id="inputName" class="form-control" placeholder="Name">
+      <input ng-model="city.name" id="inputName" class="form-control" placeholder="Name" required>
     </div>
   </div>
-  <button type="button" class="btn btn-primary" ng-click="new()">Create</button>
+  <button type="button" class="btn btn-primary" ng-click="new()" ng-disabled="formCity.$invalid">Create</button>
   <button type="button" class="btn btn-default" ng-click="endNew()">Cancel</button>
+ </form>
 </div>
 
 <table class="table table-condensed">
