set index routes

--- a/challenge3/webapp/levelfour/app/views/layouts/application.html.erb
+++ b/challenge3/webapp/levelfour/app/views/layouts/application.html.erb
@@ -26,14 +26,14 @@
             <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Houses <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="/houses/index/">index</a></li>
+              <li><a href="/houses/">index</a></li>
               <li><a href="/houses/list/">list</a></li>
             </ul>
             </li>
             <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Energies <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="/energies/index/">index</a></li>
+              <li><a href="/energies/">index</a></li>
               <li><a href="/energies/list/">list</a></li>
             </ul>
             </li>
