add view for houses#new

--- a/challenge3/webapp/levelfour/app/views/layouts/application.html.erb
+++ b/challenge3/webapp/levelfour/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
             <ul class="dropdown-menu" role="menu">
               <li><a href="/houses/">index</a></li>
               <li><a href="/houses/list/">list</a></li>
+              <li><a href="/houses/new/">new</a></li>
             </ul>
             </li>
             <li class="dropdown <%= "active" if request.url.index("energies") != nil %>">
