--- a/challenge3/webapp/levelfour/app/views/layouts/application.html.erb
+++ b/challenge3/webapp/levelfour/app/views/layouts/application.html.erb
@@ -45,6 +45,9 @@
 
     <!-- Begin page content -->
     <div class="container">
+      <% flash.each do |type, msg| %>
+        <div class="alert alert-<%=type%>"><%=msg%></div>
+      <% end %>
       <%= yield %>
     </div>
 
