--- a/challenge3/webapp/levelfour/app/views/houses/list.html.erb
+++ b/challenge3/webapp/levelfour/app/views/houses/list.html.erb
@@ -1,4 +1,5 @@
 <h1>Houses#list</h1>
+<%= paginate @houses %>
 <table class="table table-bordered table-striped">
 	<thead>
 		<tr>
@@ -19,3 +20,4 @@
 		</tr>
 	<% end %>
 </table>
+<%= paginate @houses %>
