--- a/challenge3/webapp/levelfour/app/views/energies/list.html.erb
+++ b/challenge3/webapp/levelfour/app/views/energies/list.html.erb
@@ -1,4 +1,5 @@
 <h1>Energies#list</h1>
+<%= paginate @data %>
 <table class="table table-bordered table-striped">
 	<thead>
 		<tr>
@@ -23,3 +24,4 @@
 		</tr>
 	<% end %>
 </table>
+<%= paginate @data %>
